qsk-macros/tests/fail/analyze/tap-toggle-missing-layer-ref-argument.rs
use qsk_macros::remap;

fn main() {
    remap!(
        ModLayer: {
            F -> TapToggle(),
        },
    );
}
