qsk-macros/tests/fail/analyze/tap-toggle-missing-layer-ref-argument.stderr
error: missing layer ref argument
 --> tests/fail/analyze/tap-toggle-missing-layer-ref-argument.rs:6:18
  |
6 |             F -> TapToggle(),
  |                  ^^^^^^^^^
